--- a/Source/TreasureGuide.Web/src/custom-elements/team-inline.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-inline.html
@@ -1,3 +1,5 @@
 ﻿<template>
-    <unit-display repeat.for="slot of slots" unit-id.bind="slot.unitId" name.bind="slot.name"></unit-display>
+    <unit-display repeat.for="slot of slots"
+                  model.bind="slot">
+    </unit-display>
 </template>
