Fixing up unit pickers.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -23,7 +23,7 @@
                             <div class="unit-collection">
                                 <unit-display repeat.for="unit of units"
                                               model.bind="unit"
-                                              click.delegate="clicked(unit.id)">
+                                              click.delegate="clicked(unit)">
                                 </unit-display>
                             </div>
                         </div>
