Fixing up Unit Id bindables.

--- a/Source/TreasureGuide.Web/src/custom-elements/displays/user-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/displays/user-display.html
@@ -1,7 +1,7 @@
 <template>
     <unit-display if.bind="unitId"
                   size="tiny"
-                  model.bind="unitId">
+                  unit-id.bind="unitId">
     </unit-display>
     <span>${name}</span>
 </template>
