--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -22,7 +22,7 @@
                         <div class="form-group">
                             <label for="unitInput">Captain</label>
                             <unit-display id="unitInput"
-                                          model.two-way="leaderId"
+                                          unit-id.two-way="leaderId"
                                           editable="true">
                             </unit-display>
                         </div>
