Updating bit buttons and adding limits to selections.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -40,19 +40,19 @@
                                 <label for="typeInput">
                                     Types
                                 </label>
-                                <unit-type-picker id="typeInput" unit-type.two-way="type"></unit-type-picker>
+                                <unit-type-picker id="typeInput" value.two-way="type" maximum="1"></unit-type-picker>
                             </div>
                             <div class="form-group">
                                 <label for="classInput">
                                     Classes
                                 </label>
-                                <unit-class-picker id="classInput" unit-class.two-way="class"></unit-class-picker>
+                                <unit-class-picker id="classInput" value.two-way="class" maximum="2"></unit-class-picker>
                             </div>
                             <div class="form-group">
                                 <label for="roleInput">
                                     Roles
                                 </label>
-                                <unit-role-picker id="roleInput" unit-role.two-way="role"></unit-role-picker>
+                                <unit-role-picker id="roleInput" value.two-way="role" maximum="1"></unit-role-picker>
                             </div>
                         </form>
                     </fieldset>
