--- a/Source/TreasureGuide.Web/src/custom-elements/unit-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-search.html
@@ -20,7 +20,7 @@
                     <label for="classInput">
                         Class
                     </label>
-                    <unit-class-picker id="classInput" unit-class.two-way="classes"></unit-class-picker>
+                    <unit-class-picker id="classInput" value.two-way="classes"></unit-class-picker>
                     <label for="forceClassInput">
                         <input id="forceClassInput"
                                type="checkbox"
@@ -32,7 +32,7 @@
                     <label for="typeInput">
                         Type
                     </label>
-                    <unit-type-picker id="typeInput" unit-type.two-way="types"></unit-type-picker>
+                    <unit-type-picker id="typeInput" value.two-way="types"></unit-type-picker>
                 </div>
             </div>
             <div class="row">
