--- a/Source/TreasureGuide.Web/src/custom-elements/editors/unit-class-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/editors/unit-class-picker.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <bit-button repeat.for="unit of unitClasses" value.two-way="unitClass" model.bind="unit.id">
+    <bit-button repeat.for="unit of values" value.two-way="value" model.bind="unit.id">
         <img src="/content/classes/${unit.id}.png" title.bind="unit.name" />
     </bit-button>
 </template>
