--- a/Source/TreasureGuide.Web/src/custom-elements/editors/unit-type-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/editors/unit-type-picker.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <bit-button repeat.for="unit of unitTypes" value.two-way="unitType" model.bind="unit.id">
+    <bit-button repeat.for="unit of values" value.two-way="value" model.bind="unit.id">
         <img src="/content/types/${unit.id}.png" title.bind="unit.name" />
     </bit-button>
 </template>
