Updating key checks.

--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/unit-picker.html
@@ -38,19 +38,19 @@
                         <form with.bind="genericBuilder" class="_alignCenter">
                             <div class="form-group">
                                 <label for="typeInput">
-                                    Types
+                                    Type
                                 </label>
                                 <unit-type-picker id="typeInput" value.two-way="type" maximum="1"></unit-type-picker>
                             </div>
                             <div class="form-group">
                                 <label for="classInput">
-                                    Classes
+                                    Class
                                 </label>
                                 <unit-class-picker id="classInput" value.two-way="class" maximum="2"></unit-class-picker>
                             </div>
                             <div class="form-group">
                                 <label for="roleInput">
-                                    Roles
+                                    Role
                                 </label>
                                 <unit-role-picker id="roleInput" value.two-way="role" maximum="1"></unit-role-picker>
                             </div>
