--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/team-import.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/team-import.html
@@ -28,7 +28,7 @@
             </ux-dialog-body>
             <ux-dialog-footer>
                 <input type="submit" click.delegate="submit()" class="button _primary modal-action" name="Accept" />
-                <a click.delegate="cancel()" class="button modal-action">Cancel</a>
+                <button type="button" click.delegate="cancel()" class="button modal-action">Cancel</button>
             </ux-dialog-footer>
         </ux-dialog>
     </form>
