--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/alert-dialog.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/alert-dialog.html
@@ -13,8 +13,8 @@
             ${viewModel.message}
         </ux-dialog-body>
         <ux-dialog-footer>
-            <a click.delegate="okay()" class="button modal-action _primary">${viewModel.okayMessage}</a>
-            <a if.bind="viewModel.cancelable" click.delegate="cancel()" class="button modal-action">${viewModel.cancelMessage}</a>
+            <button type="button" click.delegate="okay()" class="button modal-action _primary">${viewModel.okayMessage}</button>
+            <button type="button" if.bind="viewModel.cancelable" click.delegate="cancel()" class="button modal-action">${viewModel.cancelMessage}</button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
