--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/ship-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/ship-picker.html
@@ -19,7 +19,7 @@
             </div>
         </ux-dialog-body>
         <ux-dialog-footer>
-            <a click.delegate="cancel()" class="button modal-action">Cancel</a>
+            <button type="button" click.delegate="cancel()" class="button modal-action">Cancel</button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
