--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/stage-picker.html
@@ -30,11 +30,13 @@
             </div>
         </ux-dialog-body>
         <ux-dialog-footer>
-            <a click.delegate="clicked(null)" class="button _danger modal-action">
-                <i class="fa fa-fw fa-map-o"></i>
-                Unset
-            </a>
-            <a click.delegate="cancel()" class="button modal-action">Cancel</a>
+            <div class="_floatLeft">
+                <button type="button" click.delegate="clicked(null)" class="button _danger modal-action">
+                    <i class="fa fa-fw fa-map-o"></i>
+                    Unset
+                </button>
+            </div>
+            <button type="button" click.delegate="cancel()" class="button modal-action">Cancel</button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
