--- a/Source/TreasureGuide.Web/src/custom-elements/dialogs/video-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/dialogs/video-picker.html
@@ -22,7 +22,7 @@
             </ux-dialog-body>
             <ux-dialog-footer>
                 <input type="submit" click.delegate="okay()" class="button modal-action _primary" name="Submit" />
-                <a click.delegate="cancel()" class="button modal-action">Cancel</a>
+                <button type="button" click.delegate="cancel()" class="button modal-action">Cancel</button>
             </ux-dialog-footer>
         </ux-dialog>
     </form>
